--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 			<h1>Our Menu</h1>
 
 			<div class ="container" id="section_1">
-				<div class="sectionTitle" id="title_1">
-					<p class="title">
-						Chicken
-					</p>
+				<div>
+					<div class="sectionTitle" id="title_1">
+						<p class="title">
+							Chicken
+						</p>
+					</div>
 				</div>
 				<p class="section">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae iaculis quam, mattis dapibus nisi. Sed interdum libero metus, non viverra massa fringilla et. Etiam porta porta volutpat. Integer arcu sem, porttitor vestibulum nunc vitae, sodales hendrerit libero. Fusce quis erat urna. Vestibulum sollicitudin lectus odio, sit amet ultricies magna porta et. Cras euismod, odio et pharetra tincidunt, nulla mi tempus sapien, eget euismod felis est in erat. Quisque tempus odio vel efficitur ultrices. Pellentesque accumsan commodo nisl id varius. Aliquam erat volutpat. Vivamus facilisis arcu risus, in dictum sem congue ut.
