--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Our Menu</h1>
 
 			<div class ="container" id="section_1">
-				<div>
+				<div class="titleContainer">
 					<div class="sectionTitle" id="title_1">
 						<p class="title">
 							Chicken
