--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
 			</div>
 
 			<div class ="container" id="section_2">
-				<div class="sectionTitle" id="title_2">
-					<p class="title">
-						Beef
-					</p>
+				<div class="titleContainer">
+					<div class="sectionTitle" id="title_2">
+						<p class="title">
+							Beef
+						</p>
+					</div>
 				</div>
 				<p class="section">
 					In hac habitasse platea dictumst. Suspendisse sit amet velit ut nunc aliquet eleifend. Cras dignissim enim sit amet libero hendrerit, vel bibendum dolor molestie. Phasellus rutrum posuere quam in eleifend. Quisque rhoncus lectus ipsum, non accumsan ante aliquam vel. Mauris dictum dui id rutrum euismod. Morbi tempor aliquam turpis, ut viverra ante auctor in. In risus mauris, luctus molestie nunc nec, convallis tempus sapien. Vivamus a nibh velit. Fusce vulputate pulvinar erat, eget finibus leo viverra at. Sed vel ex nec turpis volutpat suscipit sit amet vel eros.
@@ -35,10 +37,12 @@
 			</div>
 
 			<div class ="container" id="section_3">
-				<div class="sectionTitle" id="title_3">
-					<p class="title">
-						Sushi
-					</p>
+				<div class="titleContainer">
+					<div class="sectionTitle" id="title_3">
+						<p class="title">
+							Sushi
+						</p>
+					</div>
 				</div>
 				<p class="section">
 					Fusce ut fermentum justo, et iaculis tortor. Mauris quis odio velit. Vivamus et tellus lectus. Sed condimentum ligula nec vestibulum hendrerit. In vel dolor hendrerit, varius odio eu, hendrerit est. Phasellus gravida malesuada justo, sit amet euismod ex gravida non. Donec id neque eu dolor tincidunt ultrices.
