--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		</head>
 		<body>
 			<h1>Our Menu</h1>
-			<div class="wrapper">
-				<div class ="container" id="section_1">
+			<div class="wrapper" id="section_1">
+				<div class ="container">
 					<div class="titleContainer">
 						<div class="sectionTitle" id="title_1">
 							<p class="title">
@@ -24,8 +24,8 @@
 				</div>
 			</div>
 			
-			<div class="wrapper">
-				<div class ="container" id="section_2">
+			<div class="wrapper" id="section_2">
+				<div class ="container">
 					<div class="titleContainer">
 						<div class="sectionTitle" id="title_2">
 							<p class="title">
@@ -39,8 +39,8 @@
 				</div>
 			</div>
 			
-			<div class="wrapper">
-				<div class ="container" id="section_3">
+			<div class="wrapper" id="section_3">
+				<div class ="container">
 					<div class="titleContainer">
 						<div class="sectionTitle" id="title_3">
 							<p class="title">
