--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -3,45 +3,55 @@
 		<head>
 			<meta charset="utf-8">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    		<meta name="viewport" content="width=device-width, initial-scale=1">
+    			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<title>Module 2 Coding Assignment Solution</title>
 			<link rel="stylesheet" type="text/css" href="css/style.css">
 		</head>
 		<body>
 			<h1>Our Menu</h1>
-
-			<div class ="container" id="section_1">
-				<div class="sectionTitle" id="title_1">
-					<p class="title">
-						Chicken
+			<div class="wrapper" id="section_1">
+				<div class ="container">
+					<div class="titleContainer">
+						<div class="sectionTitle" id="title_1">
+							<p class="title">
+								Chicken
+							</p>
+						</div>
+					</div>
+					<p class="section">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae iaculis quam, mattis dapibus nisi. Sed interdum libero metus, non viverra massa fringilla et. Etiam porta porta volutpat. Integer arcu sem, porttitor vestibulum nunc vitae, sodales hendrerit libero. Fusce quis erat urna. Vestibulum sollicitudin lectus odio, sit amet ultricies magna porta et. Cras euismod, odio et pharetra tincidunt, nulla mi tempus sapien, eget euismod felis est in erat. Quisque tempus odio vel efficitur ultrices. Pellentesque accumsan commodo nisl id varius. Aliquam erat volutpat. Vivamus facilisis arcu risus, in dictum sem congue ut.
 					</p>
 				</div>
-				<p class="section">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae iaculis quam, mattis dapibus nisi. Sed interdum libero metus, non viverra massa fringilla et. Etiam porta porta volutpat. Integer arcu sem, porttitor vestibulum nunc vitae, sodales hendrerit libero. Fusce quis erat urna. Vestibulum sollicitudin lectus odio, sit amet ultricies magna porta et. Cras euismod, odio et pharetra tincidunt, nulla mi tempus sapien, eget euismod felis est in erat. Quisque tempus odio vel efficitur ultrices. Pellentesque accumsan commodo nisl id varius. Aliquam erat volutpat. Vivamus facilisis arcu risus, in dictum sem congue ut.
-				</p>
 			</div>
-
-			<div class ="container" id="section_2">
-				<div class="sectionTitle" id="title_2">
-					<p class="title">
-						Beef
+			
+			<div class="wrapper" id="section_2">
+				<div class ="container">
+					<div class="titleContainer">
+						<div class="sectionTitle" id="title_2">
+							<p class="title">
+								Beef
+							</p>
+						</div>
+					</div>
+					<p class="section">
+						In hac habitasse platea dictumst. Suspendisse sit amet velit ut nunc aliquet eleifend. Cras dignissim enim sit amet libero hendrerit, vel bibendum dolor molestie. Phasellus rutrum posuere quam in eleifend. Quisque rhoncus lectus ipsum, non accumsan ante aliquam vel. Mauris dictum dui id rutrum euismod. Morbi tempor aliquam turpis, ut viverra ante auctor in. In risus mauris, luctus molestie nunc nec, convallis tempus sapien. Vivamus a nibh velit. Fusce vulputate pulvinar erat, eget finibus leo viverra at. Sed vel ex nec turpis volutpat suscipit sit amet vel eros.
+					</p>				
+				</div>
+			</div>
+			
+			<div class="wrapper" id="section_3">
+				<div class ="container">
+					<div class="titleContainer">
+						<div class="sectionTitle" id="title_3">
+							<p class="title">
+								Sushi
+							</p>
+						</div>
+					</div>
+					<p class="section">
+						Fusce ut fermentum justo, et iaculis tortor. Mauris quis odio velit. Vivamus et tellus lectus. Sed condimentum ligula nec vestibulum hendrerit. In vel dolor hendrerit, varius odio eu, hendrerit est. Phasellus gravida malesuada justo, sit amet euismod ex gravida non. Donec id neque eu dolor tincidunt ultrices.
 					</p>
 				</div>
-				<p class="section">
-					In hac habitasse platea dictumst. Suspendisse sit amet velit ut nunc aliquet eleifend. Cras dignissim enim sit amet libero hendrerit, vel bibendum dolor molestie. Phasellus rutrum posuere quam in eleifend. Quisque rhoncus lectus ipsum, non accumsan ante aliquam vel. Mauris dictum dui id rutrum euismod. Morbi tempor aliquam turpis, ut viverra ante auctor in. In risus mauris, luctus molestie nunc nec, convallis tempus sapien. Vivamus a nibh velit. Fusce vulputate pulvinar erat, eget finibus leo viverra at. Sed vel ex nec turpis volutpat suscipit sit amet vel eros.
-				</p>				
 			</div>
-
-			<div class ="container" id="section_3">
-				<div class="sectionTitle" id="title_3">
-					<p class="title">
-						Sushi
-					</p>
-				</div>
-				<p class="section">
-					Fusce ut fermentum justo, et iaculis tortor. Mauris quis odio velit. Vivamus et tellus lectus. Sed condimentum ligula nec vestibulum hendrerit. In vel dolor hendrerit, varius odio eu, hendrerit est. Phasellus gravida malesuada justo, sit amet euismod ex gravida non. Donec id neque eu dolor tincidunt ultrices.
-				</p>
-			</div>
-
 		</body>
 	</HTML>
